# contextGit

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
docs/: installation.md  installation_for_dev.md
mem/: pyproject.toml
mem/memov/core/: git.py
mem_mcp_server/: __init__.py
mem_mcp_server/cli/: __init__.py  server_cli.py
mem_mcp_server/server/: __init__.py  mcp_http_server.py  mcp_launcher.py  mcp_server.py
mem_mcp_server/utils/: summarizer.py
memov/: main.py
memov/core/: git.py  manager.py
memov/storage/: __init__.py  vectordb.py
memov/utils/: logging_utils.py
memov_mcp/cli/: mov_cli.py
memov_mcp/server/: __init__.py  mcp_http_server.py  mcp_server.py
tests/integration/test_playground/: README.md  cleanup.sh  run_tests.sh  setup.sh
