[project]
name = "mem-mcp-server"
version = "0.0.1"
description = "MCP Server for mem management and workspace monitoring"
authors = [{name = "Memov Team", email = "contact@memov.dev"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.13.0",
    "psutil>=7.0.0",
    "starlette>=0.47.2",
    "typer>=0.16.0",
    "uvicorn>=0.35.0",
]

[project.scripts]
mem-mcp-server = "mem_mcp_server.cli.server_cli:main"
mem-mcp-launcher = "mem_mcp_server.server.mcp_launcher:main"

[tool.uv]
package = true

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "pre-commit>=4.3.0",
]
