[project]
name = "memov"
version = "0.0.1"
description = "AI coding version control on top of Git - Track not just what changed, but why it changed"
authors = [{name = "Memov Team", email = "contact@memov.dev"}]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "mcp>=1.13.0",
    "pathspec>=0.11.0",
    "psutil>=7.0.0",
    "starlette>=0.47.2",
    "typer>=0.16.0",
    "uvicorn>=0.35.0",
]

[project.scripts]
mem = "memov.main:main"
mem-mcp-server = "mem_mcp_server.cli.server_cli:main"
mem-mcp-launcher = "mem_mcp_server.server.mcp_launcher:main"

[tool.uv]
package = true

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
]
